# witchy-qss-editor

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  main.cpp  qss_editor.pro
.github/workflows/: cmake-multi-platform.yml
config/: settings.cpp  settings.h
editor/: Ast.h  LineNumberArea.cpp  LineNumberArea.h  Parser.cpp  Parser.h  QssTextEditor.cpp  QssTextEditor.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h
preview/: QssWidgetsPreview.cpp  QssWidgetsPreview.h
res/: editor.qss  example.qss  res.qrc
tests/: CMakeLists.txt  test_ast.h  test_parse.cpp  test_parse.h  tests.pro
